<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".department.DepartmentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department_manage"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etDPID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department_id"/>

            <EditText
                android:id="@+id/etDPName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department_name"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnInsertDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btnUpdateDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>

        <Button
            android:id="@+id/btnCancelDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_id"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_name"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginRight="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/func"
            android:textSize="15dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingLeft="10dp"/>

</LinearLayout>