<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/etUsn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/usn"
        android:textColor="#2848FB"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pwd"
        android:textColor="#2848FB"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:background="@drawable/button_normal"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_guest"
        android:textSize="20sp"
        android:textColor="#085EA1"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>


</LinearLayout>