<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".product.ProductActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_manage"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quan Ly"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quan Ly"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="20sp"/>

            <AutoCompleteTextView
                android:id="@+id/actvBrand"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/choose_brand"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"/>

            <AutoCompleteTextView
                android:id="@+id/actvProduct"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrange"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/chkPriceUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_up"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"/>

            <CheckBox
                android:id="@+id/chkPriceDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_down"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnInsertPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"/>

    <GridView
        android:id="@+id/gvProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="2"
        android:paddingVertical="10dp"/>

</LinearLayout>